WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132746
{TelephoneNumber, Selection}OverlayControllerMac don't handle tiled drawing properly
https://bugs.webkit.org/show_bug.cgi?id=132746
Summary
{TelephoneNumber, Selection}OverlayControllerMac don't handle tiled drawing p...
Brent Fulgham
Reported
2014-05-09 11:53:54 PDT
The drawing method for TelephoneNumberOverlayControllerMac draws more often than it needs to. It also improperly restricts the region that the UI uses to layout the data detector interface, resulting in strange drawing effects if a phone number spans two (or more) tiles.
Attachments
Patch
(2.70 KB, patch)
2014-05-09 12:00 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(4.35 KB, patch)
2014-05-09 13:53 PDT
,
Brent Fulgham
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2014-05-09 11:54:14 PDT
<
rdar://problem/16789588
>
Brent Fulgham
Comment 2
2014-05-09 12:00:51 PDT
Created
attachment 231175
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-05-09 12:03:35 PDT
Comment on
attachment 231175
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231175&action=review
> Source/WebKit2/WebProcess/WebPage/mac/TelephoneNumberOverlayControllerMac.mm:102 > + // Don't give the tile rect to the highlight drawing function. It will try to be smart and place the data detector arrow on > + // the left side of the highlight if we happen to cross a tile boundary. Instead, allow it to draw over the whole frame bounds, > + // and allow the context clipping to limit the drawing to the region we want to see.
I don't think this comment is necessary. It explains why you fix this bug, but I don't think it adds value for the future.
Brent Fulgham
Comment 4
2014-05-09 12:16:41 PDT
Comment on
attachment 231175
[details]
Patch I don't think the gtk-wk2 build failure is due to this change.
Brent Fulgham
Comment 5
2014-05-09 13:53:26 PDT
Created
attachment 231184
[details]
Patch
Brent Fulgham
Comment 6
2014-05-09 13:58:27 PDT
Committed
r168551
: <
http://trac.webkit.org/changeset/168551
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug