{TelephoneNumber, Selection}ControllerMac implementations dosn't handle tiled drawing properly. https://bugs.webkit.org/show_bug.cgi?id=132746 <rdar://problem/16789588>

Reviewed by Tim Horton.

Don't try to draw the detector UI if no part of the selection bounds are inside
the current tile. Don't limit the detector UI to the bounds of this tile, or else
it will attempt to squeeze itself into the possibly small space available. Let it
draw as if it had the whole screen, and rely on the context clip region to
avoid overdrawing.

* WebProcess/WebPage/mac/TelephoneNumberOverlayControllerMac.mm:
(WebKit::TelephoneNumberOverlayController::drawRect): Correct tiled drawing behavior.
* WebProcess/WebPage/mac/SelectionOverlayControllerMac.mm:
(WebKit::SelectionOverlayController::drawRect): Ditto.


Canonical link: https://commits.webkit.org/150797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168551 268f45cc-cd09-0410-ab3c-d52691b4dbfc